<resources>
    <string name="app_name">jokeactivitylib</string>

    <string name="action_settings">Settings</string>

    <!-- Fragment Titles -->
    <string name="title_knock">Knock Knock</string>
    <string name="title_qa">Question And Answer</string>
    <string name="title_story">Story Humor</string>

    <!-- Knock Knock joke strings -->
    <string name="knockOpening">Knock knock.</string>
    <string name="firstResponse">Who\'s there?</string>
    <string name="secondResponse">%s who?</string>

    <!-- Question And Answer Strings -->
    <string name="qa_reply">I don\'t know, What?</string>
    <string name="qa_lol">LOL!!!!!</string>

    <string name="previous">Prev</string>
    <string name="next">Next</string>

    <!-- Shared Preferences -->
    <string name="extra_data">JOKE</string>
    <string name="humor_type">humorType</string>
    <string name="joke_size">jokeSize</string>
    <string name="knock">knock</string>
    <string name="first_joke">0</string>
</resources>
